--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Buku Valentine</title>
 
 <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
@@ -23,8 +23,7 @@ body{
 h1{
     color:#ff7aa2;
     margin:6px;
-    font-size:16px;
-    text-shadow:0 0 10px rgba(255,120,170,.7);
+    font-size:18px;
 }
 
 button{
@@ -34,18 +33,23 @@ button{
     padding:6px 18px;
     border-radius:20px;
     cursor:pointer;
-    margin-bottom:6px;
+    margin-bottom:8px;
     font-size:12px;
-    box-shadow:0 0 15px rgba(255,100,150,.6);
 }
 
-/* ukuran PAS HP */
+#wrap{
+    width:100%;
+    display:flex;
+    justify-content:center;
+}
+
 #book{
-    width:92vw;
-    height:52vh;
+    width:90vw;
+    max-width:720px;
+    height:60vh;
+    max-height:520px;
 }
 
-/* halaman */
 .page{
     background:white;
     overflow:hidden;
@@ -55,18 +59,15 @@ button{
         0 6px 18px rgba(255,120,170,.45);
 }
 
-/* gambar */
 .page img{
     width:200%;
     height:100%;
     object-fit:cover;
 }
 
-/* potong kiri kanan */
 .left img{transform:translateX(0)}
 .right img{transform:translateX(-50%)}
 
-/* bunga jatuh */
 .flower{
     position:fixed;
     top:-40px;
@@ -78,6 +79,14 @@ button{
 @keyframes fall{
     to{transform:translateY(110vh) rotate(360deg);opacity:0}
 }
+
+@media(max-width:480px){
+    #book{
+        width:95vw;
+        height:50vh;
+    }
+    h1{font-size:16px}
+}
 </style>
 </head>
 
@@ -86,7 +95,9 @@ button{
 <h1>Happy Valentine Sayang ❤️</h1>
 <button onclick="toggleMusic()">▶ Play Music</button>
 
-<div id="book"></div>
+<div id="wrap">
+    <div id="book"></div>
+</div>
 
 <audio id="music" src="music.mp3" loop></audio>
 <audio id="flip" src="flip.mp3"></audio>
@@ -98,7 +109,8 @@ const spreads=[
     "spread3.jpg"
 ];
 
-const pages=["cover-depan.jpg"];
+const pages=[];
+pages.push("cover-depan.jpg");
 
 spreads.forEach(src=>{
     pages.push({src,side:"left"});
@@ -107,12 +119,11 @@ spreads.forEach(src=>{
 
 pages.push("cover-belakang.jpg");
 
-/* ukuran engine flip disesuaikan HP */
 const book=new St.PageFlip(
     document.getElementById("book"),
     {
-        width:280,
-        height:400,
+        width:360,
+        height:520,
         showCover:true,
         size:"fixed",
         flippingTime:900,
@@ -137,14 +148,12 @@ const elements=pages.map(p=>{
 
 book.loadFromHTML(elements);
 
-/* suara kertas */
 const flipSound=document.getElementById("flip");
 book.on("flip",()=>{
     flipSound.currentTime=0;
     flipSound.play();
 });
 
-/* hujan bunga */
 setInterval(()=>{
     const flower=document.createElement("div");
     flower.className="flower";
@@ -153,9 +162,8 @@ setInterval(()=>{
     flower.style.animationDuration=(3+Math.random()*3)+"s";
     document.body.appendChild(flower);
     setTimeout(()=>flower.remove(),6000);
-},650);
+},700);
 
-/* musik */
 let play=false;
 function toggleMusic(){
     const m=document.getElementById("music");
