Add new spread image to the book
Added a new spread image to the book and updated the JavaScript to include it.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@ button{
 const spreads=[
     "spread1.jpg",
     "spread2.jpg",
-    "spread3.jpg"
+    "spread3.jpg",
+    "spread4.jpg"
 ];
 
 const pages=[];
