--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ button{
 <body>
 
 <div class="header">
-    <h1>Happy Valentine Sayang ❤️</h1>
+    <h1>Happy Valentine Sayangg</h1>
     <button onclick="toggleMusic()">▶ Play Music</button>
 </div>
 
@@ -218,3 +218,4 @@ function zoomOut(){
 
 </body>
 </html>
+
